<resources>
    <string name="app_name">IndigoWallet</string>
    <string name="transactions">Transactions</string>
    <string name="statistics">Statistics</string>
    <string name="drafts">Drafts</string>
    <string name="settings">Settings</string>
    <string name="add_transaction">Add Transaction</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="date">Date</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="hh_mm_a">hh:mm a</string>
    <string name="transaction_date">Transaction date</string>
    <string name="transaction_time">Transaction time</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="wallet">Wallet</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="save">Save</string>
    <string name="setup_screen_title">Hi There!</string>
    <string name="initial_amount">Initial amount</string>
    <string name="setup_screen_message_part_1">You seem to be new here.</string>
    <string name="setup_screen_message_part_2">Just enter a few details below to add a wallet and you\'ll be on your way.</string>
    <string name="done">Done</string>
    <string name="initial_balance">Initial balance</string>
    <string name="wallet_image">Wallet Image</string>
    <string name="wallet_name">Wallet name</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expense</string>

    <string name="summary_value_format">₹%1$.2f</string>
    <string name="search">Search</string>
    <string name="wallets">Wallets</string>
    <string name="edit">Edit</string>
    <string name="total_transfers">Total Transfer</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="management">Management</string>
    <string name="manage_wallets">Manage Wallets</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="backup">Backup</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category name</string>
    <string name="save_category">Save category</string>
    <string name="category_icon">Category icon</string>
    <string name="undo">Undo</string>
    <string name="add_category">Add Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="delete_transaction_confirmation">Do you want to delete this transaction?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="version">version %s</string>
    <string name="pick_icon">Pick Icon</string>

    <string name="income_count">Income (%d)</string>
    <string name="expense_count">Expense (%d)</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="select_icon">Select Icon</string>
    <string name="manage_wallets_description">Add, Edit or Remove your wallets, Adjust balance, etc</string>
    <string name="manage_categories_description">Add, edit or remove income or expense categories</string>
    <string name="sync_data">Sync Data</string>
    <string name="sync_data_description">Sync your transaction info to your Google drive to keep it safe!</string>
    <string name="title_activity_wallets_dialog">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="exclude_from_balance">Exclude from balance</string>
    <string name="exclude_wallet_description">Don\'t consider this wallet when calculating the total balance.</string>
    <string name="add_new_wallet">Add new wallet</string>
    <string name="update">Update</string>
    <string name="warning">Warning</string>
    <string name="wallet_confirmation_message">Deleting a wallet would delete all of it\'s transactions. Do you really want to delete wallet \"%s\"?</string>
    <string name="category_confirmation_message">Deleting a category would delete all of it\'s transactions. Do you really want to delete category \"%s\"?</string>
    <string name="type">Type</string>
    <string name="search_transactions">Search Transactions</string>
    <string name="date_range">Date Range</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_6_months">Last 6 months</string>
    <string name="last_1_year">Last 1 year</string>
    <string name="custom_date">Custom date</string>
    <string name="select_range">Select range</string>
    <string name="all">All</string>
    <string name="custom_range">Custom Range</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="filter_category">Filter Category</string>
    <string name="select_wallets">Select Wallets</string>
    <string name="select_categories">Select Categories</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="last_3_months">Last 3 months</string>
    <string name="no_transactions">No Transactions</string>
    <string name="no_transactions_message">Apparently, you don\'t have any transactions. \nYou can click the + button below to add one right now!</string>
    <string name="select_types">Select Types</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="selected_date_range">%s to %s</string>
    <string name="clear">Clear</string>

    <plurals name="selection_message">
        <item quantity="one"><![CDATA[%s & %d other]]></item>
        <item quantity="other"><![CDATA[%s & %d others]]></item>
    </plurals>
</resources>